<resources>
    <string name="facebook_app_id">1026739400774376</string>
    <string name="app_name">POST</string>
    <string name="post">POST</string>
    <string name="on">ON</string>
    <string name="off">OFF</string>
    <string name="app_version">VER %1$s</string>
    <string name="welcome_to_post">WELCOME TO POST</string>
    <string name="radio">RADIO</string>
    <string name="today">TODAY</string>
    <string name="confirm">확인</string>
    <string name="cancel">취소</string>
    <string name="temporary_pause">일시멈춤</string>
    <string name="clear">해제</string>
    <string name="see">보기</string>
    <string name="next">다음</string>
    <string name="setting">설정</string>
    <string name="general">일반</string>
    <string name="account">계정</string>
    <string name="notice">공지사항</string>
    <string name="support_send_mail">도움말 및 의견 보내기</string>
    <string name="about">About</string>
    <string name="notification">알림</string>
    <string name="hour">시간</string>
    <string name="minute">분</string>
    <string name="color">COLOR</string>
    <string name="post_radio">POST RADIO</string>
    <string name="post_story">POST STORY</string>
    <string name="today_kr">오늘</string>
    <string name="start_kr">시작</string>
    <string name="start_action">시작하기</string>
    <string name="stop_kr">정지</string>
    <string name="pause">Pause</string>
    <string name="play">PLAY</string>
    <string name="stop">STOP</string>
    <string name="rec">REC</string>
    <string name="retry">다시</string>
    <string name="complete">완료</string>
    <string name="streaming">스트리밍</string>
    <string name="aac">AAC+</string>
    <string name="mp3_128k">MP3 128K</string>
    <string name="mp3_192k">MP3 192K</string>
    <string name="mp3_320k">MP3 320K</string>
    <string name="_128k">128K</string>
    <string name="_192k">192K</string>
    <string name="_320k">320K</string>
    <string name="play_list_top">재생목록 맨 위</string>
    <string name="play_list_next">현재 재생 곡 다음</string>
    <string name="play_list_bottom">재생목록 맨 아래</string>
    <string name="listening">듣기</string>
    <string name="all">전체</string>
    <string name="sort">정렬</string>
    <string name="add">추가</string>
    <string name="put">담기</string>
    <string name="delete">삭제</string>
    <string name="edit">편집</string>
    <string name="share">공유</string>
    <string name="search">검색</string>
    <string name="select">선택</string>
    <string name="select_year">년도 선택</string>
    <string name="search_music">노래 검색</string>
    <string name="search_story">이야기 검색</string>
    <string name="n_count">%1$d 건</string>
    <string name="total_n_count">총 %1$d 건</string>
    <string name="n_music_count">%1$s 곡</string>
    <string name="n_cabinet_music_count">총 %1$d곡</string>
    <string name="n_music_select_count">%1$d 곡 선택</string>
    <string name="save_image">이미지로 저장</string>
    <string name="facebook">페이스북</string>
    <string name="twitter">트위터</string>
    <string name="instagram">인스타그램</string>
    <string name="line">라인</string>
    <string name="kakaotalk">카카오톡</string>
    <string name="hashtag">해시태그</string>
    <string name="detail_view">자세히 보기</string>
    <string name="position_sort">순서정렬</string>
    <string name="search_word_pop">인기 검색어</string>
    <string name="search_word_last">최근 검색어</string>
    <string name="stamp">우표</string>
    <string name="gender">성별</string>
    <string name="male">남</string>
    <string name="female">여</string>
    <string name="local">내국인</string>
    <string name="foreigner">외국인</string>
    <string name="news_agency_skt">SKT</string>
    <string name="news_agency_kt">KT</string>
    <string name="news_agency_lg">LGU+</string>
    <string name="news_agency_saving">알뜰폰</string>
    <string name="caution">주의</string>
    <string name="trans_use_coupon">이용권 전환하기</string>
    <string name="player_timer">재생타이머</string>
    <string name="player_setting">재생 관련 설정</string>
    <string name="play_list_setting">재생목록 설정</string>
    <string name="play_file_save_setting">파일 임시저장 설정</string>
    <string name="music_info">곡 정보</string>
    <string name="auth_adult">성인인증</string>
    <string name="auth_phone">휴대폰 인증</string>
    <string name="auth_self_phone">휴대폰 본인 인증</string>
    <string name="request_auth_no">인증번호 요청</string>
    <string name="regist_buy_auth_id">구매 인증 아이디 등록</string>
    <string name="use_data_network">데이터 네트워크 사용</string>
    <string name="use_location_info">위치 정보 허용 설정</string>
    <string name="use_play_file_save">임시저장 사용 설정</string>
    <string name="select_streaming_quality">스트리밍 음질 선택</string>
    <string name="select_play_list_add_position">재생목록 추가 위치</string>
    <string name="delete_500_list">500곡 초과 시 삭제</string>
    <string name="display_lock_screen_album">잠금화면 설정</string>
    <string name="confirm_device_storage">단말 용량 확인</string>
    <string name="confirm_device_storage_val">전체 %1$s / 사용가능 %2$s</string>
    <string name="delete_play_file">모든 임시저장 파일 삭제</string>
    <string name="notification_post">내 이야기의 소식들</string>
    <string name="notification_ost">내가 등록한 OST의 소식들</string>
    <string name="notification_service">서비스 알림 매너모드 표시</string>
    <string name="notification_today">TODAY 알림</string>
    <string name="agreement_service">이용약관</string>
    <string name="agreement_private">개인정보 수집 및 이용 동의</string>
    <string name="agreement_location">위치정보이용약관</string>
    <string name="agreement_scheme">개인정보보호정책</string>
    <string name="default_use_info">기본 이용 정보</string>
    <string name="birth_year">태어난 해</string>
    <string name="sns_account_sync">SNS 계정 연동</string>
    <string name="restore_data">데이터 복원</string>
    <string name="sns_account_restore_info">연동 계정을 선택해 주세요</string>
    <string name="init_service">서비스 초기화</string>
    <string name="limit_service">해외 서비스 이용 제한 안내</string>
    <string name="my_usecoupon">내 이용권</string>
    <string name="buy_usecoupon">이용권 구매</string>
    <string name="play_history">재생 히스토리</string>
    <string name="regist_destroy">가입 및 탈퇴</string>
    <string name="regist_destroy_info">서비스가입 및 탈퇴, 인증, 앱 재설치 등</string>
    <string name="music_listening">음악 감상</string>
    <string name="music_listening_info">재생, 플레이어, 재생목록 등</string>
    <string name="service_use">서비스 이용</string>
    <string name="service_use_info">사연 등록 및 OST 선곡 등 안내</string>
    <string name="payment_cancel_refund">결제 해지 환불</string>
    <string name="payment_cancel_refund_info">서비스 이용권 구매, 해지, 환불 등</string>
    <string name="etc">기타</string>
    <string name="etc_info">기타 자주 묻는 질문 등</string>
    <string name="go_app_store">앱스토어 평가하러 가기</string>
    <string name="send_mail">의견 보내기</string>
    <string name="sort_latest">최신순</string>
    <string name="sort_pop">인기순</string>
    <string name="sort_ost">OST순</string>
    <string name="sort_arti_name_asc">아티스트 명 (가~하 순)</string>
    <string name="sort_arti_name_desc">아티스트 명 (하~가 순)</string>
    <string name="sort_song_name_asc">곡 명 (가~하 순)</string>
    <string name="sort_song_name_desc">곡 명 (하~가 순)</string>
    <string name="sort_album_all">전체앨범</string>
    <string name="sort_album_release">정규앨범</string>
    <string name="sort_album_single">싱글/EP앨범</string>
    <string name="sort_album_etc">기타앨범</string>
    <string name="sort_album_join">참여앨범</string>
    <string name="sort_keep">적립</string>
    <string name="sort_use">소비</string>
    <string name="common_info">안내</string>
    <string name="common_later">나중에</string>
    <string name="common_select_all">전체선택</string>
    <string name="common_unselect_all">전체해제</string>
    <string name="common_play_all">전체듣기</string>
    <string name="common_like">LIKE</string>
    <string name="common_time">TIME</string>
    <string name="common_now_update">지금 업데이트</string>
    <string name="common_somewhere">SOMEWHERE</string>
    <string name="common_show_km">km (거리로 표시)</string>
    <string name="common_color_icon">●</string>
    <string name="common_song">곡</string>
    <string name="common_album">앨범</string>
    <string name="common_arti">아티스트</string>
    <string name="common_define_number">0</string>
    <string name="common_define_rec_time">03´00˝</string>
    <string name="common_define_play_time">00´00˝</string>
    <string name="title_regist_location">위치 등록</string>
    <string name="title_mypost">MY POST</string>
    <string name="title_regist_cabinet">보관함 만들기</string>
    <string name="title_edit_cabinet">보관함 수정</string>
    <string name="title_sns_account_sync">SNS 계정 연동 설정</string>
    <string name="menu_post">POST</string>
    <string name="menu_today">TODAY</string>
    <string name="menu_radio">RADIO</string>
    <string name="menu_popular">POPULAR</string>
    <string name="menu_mypost">MY POST</string>
    <string name="menu_timeline">타임라인</string>
    <string name="menu_search_music">노래검색</string>
    <string name="menu_buy_use_coupon">이용권구매</string>
    <string name="menu_alrimcenter">알림센터</string>
    <string name="menu_cabinet">보관함</string>
    <string name="menu_use_coupon_30s">30초 무료듣기 이용 중</string>
    <string name="btn_delete_recent_all">모두삭제</string>
    <string name="exception_request">서버 요청에 실패하였습니다.</string>
    <string name="exception_network">접속 가능한 네트워크가 존재하지 않습니다.</string>
    <string name="exception_image_upload">이미지 불러오기에 실패하였습니다.</string>
    <string name="exception_request_uai">사용자 앱ID 조회에 실패하였습니다.</string>
    <string name="hint_search_location">어디에 있나요?</string>
    <string name="hint_post_subject">제목 입력</string>
    <string name="hint_post_content">나의 이야기를 띄워 보내세요.</string>
    <string name="hint_ost_subject">이야기와 어울리는 노래를 추천해주세요</string>
    <string name="hint_ost_content">따듯한 한 마디를 건내보세요.</string>
    <string name="hint_cabinet_name">이름 (필수)</string>
    <string name="hint_cabinet_desc">내용</string>
    <string name="hint_auth_adult_name">이름 (실명)</string>
    <string name="hint_auth_adult_birth">생년월일 (주민등록번호 앞자리)</string>
    <string name="hint_auth_adult_phone_no">휴대폰 번호 입력</string>
    <string name="hint_auth_adult_foreigner_no">외국인 등록 번호 입력</string>
    <string name="hint_auth_adult_auth_no">인증 번호 입력</string>
    <string name="hint_send_mail">터치하여 작성하세요.</string>
    <string name="dialog_update">최신 업데이트가 존재합니다.</string>
    <string name="dialog_update_need">한층 개선된 POST 최신 버전이\n출시되었습니다.\n업데이트 후 이용해주세요.</string>
    <string name="dialog_update_support">한층 개선된 POST 최신 버전이\n출시되었습니다.</string>
    <string name="dialog_confirm_delete">삭제 하시겠습니까?</string>
    <string name="dialog_confirm_delete_cabinet">보관함을\n삭제 하시겠습니까?</string>
    <string name="dialog_confirm_delete_voice">이전 녹음이 삭제됩니다.\n계속 하시겠습니까?</string>
    <string name="dialog_confirm_delete_play_file">모든 임시저장 파일을\n삭제 하시겠습니까?</string>
    <string name="dialog_confirm_ost_title">타이틀 곡으로 선정 하시겠습니까?</string>
    <string name="dialog_confirm_data_network_title">데이터 네트워크가 차단 상태입니다.\n데이터 네트워크를 사용하시겠습니까?</string>
    <string name="dialog_confirm_data_network">사용중인 데이터 요금제에 따라\n데이터 통화료가 부과될 수 있습니다.</string>
    <string name="dialog_info_notify">신고 되었습니다.</string>
    <string name="dialog_info_delete">삭제 되었습니다.</string>
    <string name="dialog_info_locale_title">해외 서비스 이용 제한 안내</string>
    <string name="dialog_player_sort">재생목록이 선택한 순서로\n변경됩니다.</string>
    <string name="dialog_radio_on_air">정지 또는 다른 곡 재생 전까지\nPOST RADIO의 사연과\n타이틀 곡이 연속으로 재생됩니다.</string>
    <string name="msg_init_info_prefix">POST와 함깨한 소중한 순간의 이야기와 멜로디들</string>
    <string name="msg_init_info_suffix">개가 모두 삭제됩니다.</string>
    <string name="msg_init_info_notice">지금까지 POST와 함께한 모든 순간들의 데이터가\n삭제되고 앱이 초기화 되며 다시 복구하실 수 없습니다.</string>
    <string name="msg_init_info_notice_detail">· 활동을 통해 획득하신 우표도 데이터와 함께 초기화 되며 이후 복구하실 수 없습니다.\n\n· 음악 이용권 내역은 그대로 유지되어 보유하신 이용권에 따라 음악 감상이 가능합니다.</string>
    <string name="msg_agree_all_message">모든 내용을 확인하였으며 동의합니다.</string>
    <string name="msg_send_mail">소중한 의견에 귀 기울이겠습니다</string>
    <string name="msg_send_mail_info">사용에 불편하시거나 개선되었으면 하는 점이 있다면\n무엇이든 의견을 보내주세요.</string>
    <string name="msg_send_mail_prefix">답변이 필요한 사항은</string>
    <string name="msg_send_mail_suffix">으로 문의 주세요.</string>
</resources>