<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#B3000000">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="#FFFFFFFF"
        android:minWidth="200dp"
        android:orientation="vertical">

        <!-- Title -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="#FF111111"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add"
                android:textColor="#FFFFFFFF"
                android:textSize="11dp"/>

        </LinearLayout>

        <!-- Message -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dialog_player_sort"
                android:textColor="#99000000"
                android:textSize="11dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#FFF2F2F2"/>

        <LinearLayout
            android:id="@+id/llPlayerSortArtiAscBtn"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:clickable="true"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="20dp"
                android:text="@string/sort_arti_name_asc"
                android:textColor="#FF000000"
                android:textSize="11dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#FFF2F2F2"/>

        <LinearLayout
            android:id="@+id/llPlayerSortArtiDescBtn"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:clickable="true"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="20dp"
                android:text="@string/sort_arti_name_desc"
                android:textColor="#FF000000"
                android:textSize="11dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#FFF2F2F2"/>

        <LinearLayout
            android:id="@+id/llPlayerSortSongAscBtn"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:clickable="true"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="20dp"
                android:text="@string/sort_song_name_asc"
                android:textColor="#FF000000"
                android:textSize="11dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#FFF2F2F2"/>

        <LinearLayout
            android:id="@+id/llPlayerSortSongDescBtn"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:clickable="true"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="20dp"
                android:text="@string/sort_song_name_desc"
                android:textColor="#FF000000"
                android:textSize="11dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#FFF2F2F2"/>

        <!-- Button -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="24dp"
            android:background="#FFFFFFFF"
            android:gravity="center_vertical|right"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnPlayerSortCancel"
                android:layout_width="68dp"
                android:paddingEnd="24dp"
                android:layout_height="match_parent"
                android:background="@null"
                android:gravity="center_vertical|right"
                android:text="@string/cancel"
                android:textColor="#FF00afd5"
                android:textSize="11dp"/>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>