<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#B3000000">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="#FFFFFFFF"
        android:minWidth="200dp"
        android:orientation="vertical">

        <!-- Title -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="#FFFFFFFF"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/icon_onair_mini"
                android:contentDescription="@string/app_name"/>

        </LinearLayout>

        <!-- Content -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"
            android:gravity="center_vertical|left"
            android:minHeight="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvRadioOnAirInfoMessage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dialog_radio_on_air"
                android:textColor="#99000000"
                android:textSize="11dp"/>

        </LinearLayout>

        <!-- Button -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="#FFFFFFFF"
            android:gravity="center_vertical|right"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnRadioOnAirCancel"
                android:layout_width="68dp"
                android:layout_height="match_parent"
                android:background="@null"
                android:gravity="center_vertical|right"
                android:paddingEnd="24dp"
                android:text="@string/confirm"
                android:textColor="#FF00afd5"
                android:textSize="11dp"/>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>